force-app/main/default/objects/tc9_et__Assignment_Configurator__c/tc9_et__Assignment_Configurator__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting used to map fields that will automatically be copied from Client to Assignment when Assignments are created.</description>
    <label>Time2Pay Assignment Configurator</label>
</CustomObject>