force-app/main/default/objects/tc9_et__Assignment_Configurator__c/fields/tc9_et__Assignment_Field__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment_Field__c</fullName>
    <description>The Assignment field name where the value pulled from the Client needs to be populated</description>
    <inlineHelpText>The Assignment field name where the value pulled from the Client needs to be populated</inlineHelpText>
    <label>Assignment Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>