force-app/main/default/objects/tc9_et__Assignment_Configurator__c/fields/tc9_et__Client_Field__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Client_Field__c</fullName>
    <description>The Client field name that will be used to populate the defined Assignment field.</description>
    <inlineHelpText>The Client field name that will be used to populate the defined Assignment field.</inlineHelpText>
    <label>Client Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>