force-app/main/default/objects/tc9_et__Assignment_Configurator__c/fields/tc9_et__On_Create_Override_Existing__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__On_Create_Override_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the user has entered a value in the Assignment field before the initial save, when True, the user entered value will be overridden with the value from the specified Client field. The value will only override user entry on initial save of record.</description>
    <inlineHelpText>If the user has entered a value in the Assignment field before the initial save, when True, the user entered value will be overridden with the value from the specified Client field. The value will only override user entry on initial save of record.</inlineHelpText>
    <label>On Create Override Existing</label>
    <type>Checkbox</type>
</CustomField>