force-app/main/default/objects/tc9_et__Assignment_Configurator__c/fields/tc9_et__Record_Types__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Record_Types__c</fullName>
    <description>List the Assignment Record Type Developer Name(s) (case sensitive) from which the field will be copied. Separated by a comma (,) and no spaces. For example, “Temp,Perm”. If left blank this field will be copied for all Assignment record types.</description>
    <inlineHelpText>List the Assignment Record Type Developer Name(s) (case sensitive) from which the field will be copied. Separated by a comma (,) and no spaces. For example, “Temp,Perm”. If left blank this field will be copied for all Assignment record types.</inlineHelpText>
    <label>Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>